--- a/assets/style.css
+++ b/assets/style.css
@@ -69,8 +69,8 @@ nav {
     justify-content: space-between;
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 100;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(2rem);
+    -webkit-backdrop-filter: blur(2rem);
 }
 
 nav a {
@@ -503,6 +503,10 @@ footer .copyright {
         flex-direction: column;
         align-items: flex-start;
         padding: 1rem;
+    }
+
+    #clientele {
+        padding: 0 !important;
     }
 
     .mock-container,
