--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,18 @@ body {
     padding: 0;
 }
 
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+    background: radial-gradient(circle at 40% 20%, rgba(255, 140, 245, 0.03) 20%, transparent 40%),
+        radial-gradient(circle at 60% 50%, rgba(61, 177, 160, 0.05) 100%, transparent 40%),
+        radial-gradient(circle at 40% 60%, rgba(94, 35, 142, 0.03) 100%, transparent 40%);
+}
+
 a {
     color: #ffae00;
     text-decoration: none;
@@ -67,7 +79,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(15, 15, 15, 0.3);
     z-index: 100;
     backdrop-filter: blur(2rem);
     -webkit-backdrop-filter: blur(2rem);
@@ -137,7 +149,7 @@ header #showcase {
     width: 100%;
     height: 90vh;
     margin-top: 5rem;
-    background: black;
+    background: transparent;
     filter: brightness(0.45);
     z-index: -1;
 }
@@ -183,8 +195,8 @@ section .about {
 }
 
 .cards .card {
-    background: #111;
-    border: #333 solid 1px;
+    background: rgba(200, 200, 200, 0.05);
+    border: rgba(200, 200, 200, 0.15) solid 1px;
     border-radius: 8px;
     padding: 1rem 2rem;
     align-items: center;
@@ -219,6 +231,7 @@ section .about {
     aspect-ratio: 16/9;
     margin: 0 auto;
     height: auto;
+    border-radius: 5px;
 }
 .swiper-slide {
     background-repeat: no-repeat;
@@ -242,7 +255,7 @@ section .about {
 }
 
 .mock-container {
-    background: #111;
+    background: rgba(100, 100, 100, 0.2);
     border-radius: 1rem;
     width: 100%;
     display: flex;
@@ -252,7 +265,7 @@ section .about {
 
 .mock-container .preview {
     width: 50%;
-    background: rgba(255, 255, 255, 0.05);
+    background: rgba(100, 100, 100, 0.1);
     border-radius: 0 1rem 1rem 0;
     padding: 1rem;
 }
@@ -410,9 +423,9 @@ form select {
 
 footer {
     width: 100%;
-    background-color: #111;
+    background-color: rgba(150, 150, 150, 0.08);
     border-top: 1px solid #333;
-    padding: 3rem 12vw;
+    padding: 3rem 12vw 5rem 12vw;
 }
 
 footer h3 {
@@ -423,20 +436,10 @@ footer h3 {
 }
 
 footer .socials {
-    display: flex;
-    gap: 10px;
-    margin: 1rem 0;
-}
-footer .socials .social {
-    width: 3rem;
-    height: 3rem;
-    border-radius: 100rem;
-    background: #0066ff;
-    color: white;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 2rem;
+    margin: 1.5rem 0;
 }
 
 footer hr {
@@ -503,6 +506,13 @@ footer .copyright {
         flex-direction: column;
         align-items: flex-start;
         padding: 1rem;
+    }
+
+    .cards .card .flex {
+        gap: 1rem;
+    }
+    .cards .card span {
+        font-size: 2rem;
     }
 
     #clientele {
