--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,900;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Prompt:wght@500;600;700;800&display=swap");
 
 :root {
@@ -22,6 +22,56 @@ body {
     font-size: 16px;
     margin: 0;
     padding: 0;
+}
+
+.hero-banner {
+    margin-top: -3rem;
+    position: relative;
+    max-height: 900px;
+}
+
+.video-container {
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    overflow: hidden;
+}
+
+.video-banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.25);
+}
+
+.hero-title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 1000px;
+    text-align: center;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+    color: #fff;
+    line-height: 1.6;
+    font-weight: 700;
+}
+
+@media (max-width: 768px) {
+    .hero-banner {
+        margin: 4rem 0 8rem 0;
+    }
+    .video-banner {
+        transform: scale(1.4);
+    }
+    .hero-title {
+        width: 90%;
+        font-size: 1.4rem;
+        font-weight: 600;
+    }
 }
 
 .backdrop {
@@ -63,6 +113,27 @@ a:hover {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
+}
+
+.cta-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin: 2rem 0;
+}
+
+.cta-flex a {
+    text-decoration: none;
+}
+
+.cta-flex button {
+    padding: 12px 3rem;
+    border-radius: 12px;
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 600;
+    cursor: pointer;
 }
 
 del {
@@ -298,7 +369,7 @@ section .about {
     max-width: 600px;
     margin: 0 auto;
     text-align: center;
-    line-height: 2.5rem;
+    line-height: 2;
     color: #eee;
     font-size: 1.2rem;
 }
@@ -372,7 +443,7 @@ section .about {
     aspect-ratio: 16/9;
     margin: 0 auto;
     height: auto;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 .swiper-slide {
     background-repeat: no-repeat;
@@ -630,7 +701,7 @@ footer .copyright {
     }
 
     section .about {
-        line-height: 1.8rem !important;
+        line-height: 1.6 !important;
         font-size: 1.2rem !important;
     }
 
@@ -638,8 +709,24 @@ footer .copyright {
         margin: 0 auto;
     }
 
+    section .dot-separator {
+        margin: 1rem auto;
+    }
+
     section .cta-info {
         font-size: 1.2rem !important;
+    }
+
+    .cta-flex {
+        padding: 10px;
+        gap: 5px;
+        margin-top: 2rem;
+    }
+
+    .cta-flex button {
+        padding: 12px 1.5rem;
+        border-radius: 8px;
+        font-size: 0.9rem;
     }
 
     .cards .card {
@@ -655,6 +742,10 @@ footer .copyright {
     .cards .card .flex h3,
     .cards .card p {
         font-size: 16px;
+    }
+
+    .swiper {
+        border-radius: 0;
     }
 
     #clientele {
