--- a/assets/style.css
+++ b/assets/style.css
@@ -28,13 +28,13 @@ body {
     margin-top: -3rem;
     position: relative;
     max-height: 900px;
+    overflow: hidden;
 }
 
 .video-container {
     width: 100%;
     height: 0;
     padding-bottom: 100%;
-    overflow: hidden;
 }
 
 .video-banner {
@@ -60,17 +60,7 @@ body {
     font-weight: 700;
 }
 
-@media (max-width: 1024px) {
-    .hero-banner {
-        display: none;
-    }
-}
-
-/* Apple shits itself when you try to use a video as a background */
-/* @media (max-width: 768px) {
-    .hero-banner {
-        margin: 4rem 0 8rem 0;
-    }
+@media (max-width: 768px) {
     .video-banner {
         transform: scale(1.4);
     }
@@ -79,7 +69,7 @@ body {
         font-size: 1.4rem;
         font-weight: 600;
     }
-} */
+}
 
 .backdrop {
     position: fixed;
@@ -127,7 +117,9 @@ a:hover {
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    margin: 2rem 0;
+    margin: 2rem auto;
+    padding: 12px;
+    max-width: 500px;
 }
 
 .cta-flex a {
@@ -140,6 +132,7 @@ a:hover {
     font-size: 1.2rem;
     color: white;
     font-weight: 600;
+    width: 100%;
     cursor: pointer;
 }
 
@@ -725,15 +718,19 @@ footer .copyright {
     }
 
     .cta-flex {
-        padding: 10px;
+        padding: 1rem;
         gap: 5px;
         margin-top: 2rem;
+    }
+
+    .cta-flex a {
+        width: 100%;
     }
 
     .cta-flex button {
         padding: 12px 1.5rem;
         border-radius: 8px;
-        font-size: 0.9rem;
+        font-size: 1rem;
     }
 
     .cards .card {
