--- a/assets/style.css
+++ b/assets/style.css
@@ -611,16 +611,28 @@ form label {
 }
 
 form select {
-    border: none;
-    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
     font-family: inherit;
-    font-size: inherit;
-    padding: 10px 1rem;
-    background: transparent;
-    border-bottom: 2px solid hsl(0, 0%, 20%);
-    color: white;
     font-size: 1rem;
+    outline: none;
+    text-decoration: none;
+    background: transparent;
+    border: 0;
+    border-bottom: 2px solid hsl(0, 0%, 20%);
+    border-radius: 0;
+    padding: 10px 1rem;
+    color: white;
+    font-weight: 500;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' class='bi bi-chevron-down' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 1 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right 0.5rem top 50%;
+    background-size: 1rem auto;
 }
 
 footer {
