--- a/assets/style.css
+++ b/assets/style.css
@@ -31,9 +31,10 @@ body {
     width: 100%;
     height: 100vh;
     z-index: -1;
-    background: radial-gradient(circle at 40% 20%, rgba(255, 140, 245, 0.03) 20%, transparent 40%),
-        radial-gradient(circle at 60% 50%, rgba(61, 177, 160, 0.05) 100%, transparent 40%),
-        radial-gradient(circle at 40% 60%, rgba(94, 35, 142, 0.03) 100%, transparent 40%);
+    background: radial-gradient(circle at 25% 180%, rgba(189, 102, 255, 0.07) 50%, transparent 60%),
+        radial-gradient(circle at 0% 100%, rgba(98, 132, 255, 0.07) 50%, transparent 60%),
+        radial-gradient(circle at 100% 180%, rgba(255, 106, 106, 0.07) 50%, transparent 60%),
+        radial-gradient(circle at 80% 0%, rgba(99, 214, 255, 0.07) 50%, transparent 60%);
 }
 
 a {
@@ -162,6 +163,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 8rem;
 }
 
 header .splash {
@@ -342,7 +344,7 @@ section .about {
 
 .separator {
     padding-bottom: 2rem;
-    border-bottom: 2px solid #151515;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.08);
 }
 
 .cards {
@@ -534,25 +536,57 @@ section .about {
 .awards {
     padding-top: 2rem;
     padding-bottom: 2rem;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 4rem;
 }
 
+.awards .award {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+}
+
 .flex-posts {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 2rem;
     padding-top: 0;
-    padding-bottom: 5rem;
+    padding-bottom: 8rem;
+    overflow-x: hidden;
+    width: 100vw;
+}
+
+.flex-posts iframe {
+    border: none;
+    overflow: hidden;
+    width: 500px;
+    height: 505px;
 }
 
 @media (max-width: 768px) {
     .awards,
     .flex-posts {
         flex-direction: column;
+    }
+
+    .flex-posts {
+        gap: 0;
+    }
+
+    .flex-posts iframe {
+        scale: 0.9;
+    }
+}
+
+@media (max-width: 425px) {
+    .flex-posts iframe {
+        scale: 0.7;
+        margin-top: -5rem;
+        margin-bottom: -2.5rem;
     }
 }
 
