--- a/assets/style.css
+++ b/assets/style.css
@@ -171,7 +171,7 @@ header .splash {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 5rem);
     margin-top: 5rem;
     background: black;
     display: flex;
@@ -290,36 +290,26 @@ header .mobile-only {
 }
 
 .ctaSection {
-    position: sticky;
-    top: 5rem;
-    max-width: 2600px;
+    position: fixed;
+    bottom: 0;
+    z-index: 100;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
     width: 100vw;
-    max-height: fit-content;
+    height: 100px;
     padding: 0 5%;
-    margin: 5rem auto 0 auto;
+    font-size: 1rem;
     overflow: hidden;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    background-color: rgba(0, 0, 0, 0.6);
+    -webkit-backdrop-filter: blur(4rem);
+    backdrop-filter: blur(4rem);
 }
 
-.ctaSection canvas {
-    width: 100%;
-    height: 100%;
-    filter: brightness(0.2);
-    background: black;
-    border-radius: 2rem;
-    z-index: -1;
-}
-
-.ctaSection div {
-    position: absolute;
-    top: 50%;
-    left: 0%;
-    transform: translateY(-50%);
-    padding: 0 20%;
-    text-align: center;
-}
-
-.ctaSection div .title {
-    font-size: 4rem;
+.ctaSection .title {
+    font-size: 1.5rem;
     font-weight: 900;
     background: linear-gradient(45deg, #ffae00, #ff00d9);
     -webkit-background-clip: text;
@@ -327,43 +317,36 @@ header .mobile-only {
     background-clip: text;
 }
 
-.ctaSection div h2 {
-    font-weight: 400;
-    color: white;
-}
-
-.ctaSection div .cta {
-    margin: 3rem auto;
-    font-size: 1.5rem;
+.ctaSection .cta {
     text-decoration: none;
 }
 
-.ctaSection div .cta button {
+.ctaSection .cta button {
     display: flex;
     align-items: center;
-    gap: 2rem;
-    padding: 1rem 3rem;
+    gap: 1rem;
+    padding: 10px 2rem;
     border-radius: 100rem;
+    text-wrap: nowrap;
 }
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .ctaSection {
-        height: 80vh;
+        position: static;
+        height: fit-content;
+        margin: 0 auto 3rem auto;
+        padding: 1rem;
+        background-color: #111;
+        display: block;
+        border-top: 0;
     }
-    .ctaSection div {
-        padding: 5rem 10%;
+    .ctaSection .title {
+        font-size: 2rem;
+        width: 100%;
+        margin: 2rem 0;
     }
-    .ctaSection div .title {
-        font-size: 2.5rem;
-    }
-    .ctaSection div h2 {
-        font-size: 1.2rem;
-    }
-    .ctaSection div i {
-        display: none;
-    }
-    .ctaSection div .cta {
-        font-size: 1rem;
+    .ctaSection .cta {
+        margin: 3rem auto;
     }
 }
 
@@ -378,20 +361,6 @@ section .title {
     margin: 1rem auto 2rem auto;
     text-align: center;
     max-width: 600px;
-}
-
-section .statistic {
-    margin: 0 auto;
-    font-size: 4rem;
-    font-weight: 300 !important;
-}
-
-section .highlight {
-    color: white;
-    background: #ffae0020;
-    padding: 0px 5px;
-    border-radius: 3px;
-    font-weight: 600;
 }
 
 section .brand {
@@ -788,6 +757,7 @@ footer {
     background-color: rgba(150, 150, 150, 0.08);
     border-top: 1px solid #333;
     padding: 3rem 12vw 5rem 12vw;
+    margin-bottom: 120px;
 }
 
 footer h3 {
@@ -855,15 +825,6 @@ footer .copyright {
         font-size: 1.2rem !important;
     }
 
-    section .statistic {
-        font-size: 3rem;
-        margin: 0 auto;
-    }
-
-    section .cta-info {
-        font-size: 1.2rem !important;
-    }
-
     .cards .card {
         flex-direction: column;
         align-items: flex-start;
@@ -913,6 +874,7 @@ footer .copyright {
 
     footer {
         padding: 2rem 5vw 8rem 5vw;
+        margin-bottom: 0;
     }
     footer .links {
         grid-template-columns: 1fr;
