--- a/assets/style.css
+++ b/assets/style.css
@@ -596,8 +596,11 @@ section .about {
 }
 
 .flex-posts img {
-    width: 500px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1/1;
+    max-width: 500px;
+    max-height: 500px;
 }
 
 @media (max-width: 768px) {
@@ -606,21 +609,10 @@ section .about {
         flex-direction: column;
     }
 
-    .flex-posts {
-        gap: 0;
-    }
-
-    .flex-posts iframe {
+    .flex-posts img {
         width: 100%;
         height: auto;
         aspect-ratio: 1/1;
-    }
-}
-
-@media (max-width: 425px) {
-    .flex-posts iframe {
-        margin-top: -5rem;
-        margin-bottom: -2.5rem;
     }
 }
 
