--- a/pages/assets/pages.css
+++ b/pages/assets/pages.css
@@ -4,6 +4,11 @@
 body {
     background: #eaeaea;
 }
+
+body::before {
+    content: none;
+}
+
 nav {
     background: black;
     position: absolute;
